[project]
name = "aoc"
version = "0.1.0"
description = "Josh2112's AoC repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "requests",
    "pillow",
    "numpy",
    "more_itertools",
    "aoclib",
]

[tool.uv.workspace]
members = ["aoclib/aoclib"]

[tool.uv.sources]
aoclib = { workspace = true }
