[project]
name = "aoclib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joshua Foster", email = "josh2112@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
